samples/_failures_safe/1761259473_9842e1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_818e2b94.c: In function ‘main’:
./samples/SAFE/__tmp_818e2b94.c:142:17: error: expected declaration or statement at end of input
  142 |                 TRANSITION(process_writing_state(&ctx));
      |                 ^~~~~~~~~~
./samples/SAFE/__tmp_818e2b94.c:142:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_818e2b94.c:142:17: error: expected declaration or statement at end of input
